package dk.via.habittracker.backend.enums;

public enum FrequencyType {
    DAILY,
  SELECTED_DAYS
}
