package dk.via.habittracker.backend.enums;

public enum HabitEntryStatus {
    COMPLETED,
  MISSED,
  PARTIALLY_COMPLETED
}
