package dk.via.habittracker.backend.enums;

public enum HabitType {
     YES_NO,
  NUMBER
}
