package dk.via.habittracker.backend.enums;

public enum Role {
    USER,
    ADMIN

}
