package dk.via.habittracker.backend.enums;

public enum ThemeMode {
     LIGHT,
  DARK,
  SYSTEM
}
